# CG4_Scene

./: .clang-format  .gitignore  CMakeLists.txt
animator/: UFOAnimator.cpp  UFOAnimator.h  animatorBase.h
camera/: camera.cpp  camera.h
drawable/: drawable.cpp  drawable.h
drawable/custom_objects/: plane.h
drawable/mesh/: mesh.cpp  mesh.h
drawable/model/: model.cpp  model.h
lights/: bindLight.cpp  bindLight.h  bindedLight.h  dirLight.h  pointLight.cpp  pointLight.h  spotLight.cpp  spotLight.h
mesh/: mesh.cpp  mesh.h
model/: model.cpp  model.h
models/bonfire__fire/: license.txt  scene.gltf
models/fire_bonfire/: license.txt  scene.gltf
scene/: scene.cpp  scene.h
shader/: shader.cpp  shader.h
shadersSources/: fragmentDefaultShader.frag  fragmentMaterial.frag  fragmentModelWithSpecular.frag  fragmentModelWithoutSpecular.frag  vertexDefaultShader.vert
src/: CMakeLists.txt  main.cpp  main.cxx
textureLoader/: textureLoader.cpp  textureLoader.h
window/: window.cpp  window.h
